identifiers-uri/tests/ui/uri_not_newtype.rs
use identifiers_uri::UriIdentifier;

#[derive(UriIdentifier)]
struct BadId(String, String);

fn main() {}
